--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,3 @@
-# cmake_minimum_required(VERSION <specify CMake version here>)
-
 cmake_minimum_required(VERSION 3.12)
 project(hydra)
 
@@ -11,7 +9,7 @@ set(SDL2_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/lib/SDL2-2.0.8/include")
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(hydra PUBLIC ${CMAKE_SOURCE_DIR}/lib/SDL2-2.0.8/include)
-add_executable(hydra main.cpp Game.cpp Game.h)
+add_executable(hydra main.cpp Game.cpp Game.h Relax.h GameState.cpp GameState.h Reconstruct.cpp Actions.h)
 
 target_link_libraries(hydra -static gcc stdc++ winpthread ${CMAKE_SOURCE_DIR}/lib/SDL2-2.0.8/cmake-build-release/libSDL2main.a ${CMAKE_SOURCE_DIR}/lib/SDL2-2.0.8/cmake-build-release/libSDL2.dll.a)
 
